Expand unit tests; adjust Order model
Remove restrictive setter on Order.referenceCode and add/expand comprehensive unit tests across services. Tests: greatly extend CategoryServiceUTest (helpers, create/update/delete flows, image handling, static GlobalDefaults mocking), add EmailServiceUTest, refactor and expand ImageServiceUTest (init, upload/delete, replacement logic with S3 interactions), reorganize OrderItemServiceUTest (find helper error handling), and broaden OrderServiceUTest (role-based routing, statistics, order creation/stock distribution, status updates/cancellations, cart operations). Also inject ImageService mocks and tweak test utilities/fixtures to better exercise business rules and S3 interactions.